lib/parser/parser.output
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompileUnit $end

    1 CompileUnit: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl
    7     | VarDecl

    8 Type: Y_INT
    9     | Y_FLOAT
   10     | Y_VOID

   11 ConstDecl: Y_CONST Type ConstDefs Y_SEMICOLON

   12 ConstDefs: ConstDef
   13          | ConstDef Y_COMMA ConstDefs

   14 ConstDef: Y_ID Y_ASSIGN ConstInitVal
   15         | Y_ID ConstAS Y_ASSIGN ConstInitVal

   16 ConstAS: Y_LSQUARE ConstExp Y_RSQUARE
   17        | Y_LSQUARE ConstExp Y_RSQUARE ConstAS

   18 ConstExp: AddExp

   19 ConstInitVal: ConstExp
   20             | Y_LBRACKET Y_RBRACKET
   21             | Y_LBRACKET ConstInitVals Y_RBRACKET

   22 ConstInitVals: ConstInitVal
   23              | ConstInitVal Y_COMMA ConstInitVals

   24 VarDecl: Type VarDefs Y_SEMICOLON

   25 VarDefs: VarDef
   26        | VarDef Y_COMMA VarDefs

   27 VarDef: Y_ID
   28       | Y_ID ConstAS
   29       | Y_ID Y_ASSIGN InitVal
   30       | Y_ID ConstAS Y_ASSIGN InitVal

   31 InitVal: Exp
   32        | Y_LBRACKET Y_RBRACKET
   33        | Y_LBRACKET InitVals Y_RBRACKET

   34 InitVals: InitVal
   35         | InitVal Y_COMMA InitVals

   36 FuncDef: Type Y_ID Y_LPAR Y_RPAR Block
   37        | Type Y_ID Y_LPAR FuncFParams Y_RPAR Block

   38 FuncFParams: FuncFParam
   39            | FuncFParam Y_COMMA FuncFParams

   40 FuncFParam: Type Y_ID
   41           | Type Y_ID Y_LSQUARE Y_RSQUARE
   42           | Type Y_ID Y_LSQUARE Y_RSQUARE ArraySubscripts

   43 ArraySubscripts: Y_LSQUARE Exp Y_RSQUARE
   44                | Y_LSQUARE Exp Y_RSQUARE ArraySubscripts

   45 Block: Y_LBRACKET Y_RBRACKET
   46      | Y_LBRACKET BlockItems Y_RBRACKET

   47 BlockItems: BlockItem
   48           | BlockItems BlockItem

   49 BlockItem: Decl
   50          | Stmt

   51 Stmt: LVal Y_ASSIGN Exp Y_SEMICOLON
   52     | Y_SEMICOLON
   53     | Exp Y_SEMICOLON
   54     | Block
   55     | Y_IF Y_LPAR LOrExp Y_RPAR Stmt
   56     | Y_IF Y_LPAR LOrExp Y_RPAR Stmt Y_ELSE Stmt
   57     | Y_WHILE Y_LPAR LOrExp Y_RPAR Stmt
   58     | Y_BREAK Y_SEMICOLON
   59     | Y_CONTINUE Y_SEMICOLON
   60     | Y_RETURN Y_SEMICOLON
   61     | Y_RETURN Exp Y_SEMICOLON

   62 Exp: AddExp

   63 LVal: Y_ID
   64     | Y_ID ArraySubscripts

   65 PrimaryExp: Y_LPAR Exp Y_RPAR
   66           | LVal
   67           | Number

   68 Number: num_INT
   69       | num_FLOAT

   70 UnaryExp: PrimaryExp
   71         | Y_ID Y_LPAR Y_RPAR
   72         | Y_ID Y_LPAR FuncRParams Y_RPAR
   73         | Y_ADD UnaryExp
   74         | Y_SUB UnaryExp
   75         | Y_NOT UnaryExp

   76 FuncRParams: Exp
   77            | Exp Y_COMMA FuncRParams

   78 MulExp: UnaryExp
   79       | MulExp Y_MUL UnaryExp
   80       | MulExp Y_DIV UnaryExp
   81       | MulExp Y_MODULO UnaryExp

   82 AddExp: MulExp
   83       | AddExp Y_ADD MulExp
   84       | AddExp Y_SUB MulExp

   85 RelExp: AddExp
   86       | RelExp Y_LESS AddExp
   87       | RelExp Y_GREAT AddExp
   88       | RelExp Y_LESSEQ AddExp
   89       | RelExp Y_GREATEQ AddExp

   90 EqExp: RelExp
   91      | EqExp Y_EQ RelExp
   92      | EqExp Y_NOTEQ RelExp

   93 LAndExp: EqExp
   94        | LAndExp Y_AND EqExp

   95 LOrExp: LAndExp
   96       | LOrExp Y_OR LAndExp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    Y_INT (258) 8
    Y_VOID (259) 10
    Y_CONST (260) 11
    Y_IF (261) 55 56
    Y_ELSE (262) 56
    Y_WHILE (263) 57
    Y_BREAK (264) 58
    Y_CONTINUE (265) 59
    Y_RETURN (266) 60 61
    Y_ADD (267) 73 83
    Y_SUB (268) 74 84
    Y_MUL (269) 79
    Y_DIV (270) 80
    Y_MODULO (271) 81
    Y_LESS (272) 86
    Y_LESSEQ (273) 88
    Y_GREAT (274) 87
    Y_GREATEQ (275) 89
    Y_NOTEQ (276) 92
    Y_EQ (277) 91
    Y_NOT (278) 75
    Y_AND (279) 94
    Y_OR (280) 96
    Y_ASSIGN (281) 14 15 29 30 51
    Y_LPAR (282) 36 37 55 56 57 65 71 72
    Y_RPAR (283) 36 37 55 56 57 65 71 72
    Y_LBRACKET (284) 20 21 32 33 45 46
    Y_RBRACKET (285) 20 21 32 33 45 46
    Y_LSQUARE (286) 16 17 41 42 43 44
    Y_RSQUARE (287) 16 17 41 42 43 44
    Y_COMMA (288) 13 23 26 35 39 77
    Y_SEMICOLON (289) 11 24 51 52 53 58 59 60 61
    Y_FLOAT (290) 9
    num_INT <AST::int32> (291) 68
    num_FLOAT <AST::float32> (292) 69
    Y_ID <AST::string> (293) 14 15 27 28 29 30 36 37 40 41 42 63 64 71 72


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    CompileUnit (40)
        on left: 1
        on right: 0
    CompUnit <std::shared_ptr<CompUnit>> (41)
        on left: 2 3 4 5
        on right: 1 2 3
    Decl <std::shared_ptr<Stmt>> (42)
        on left: 6 7
        on right: 2 4 49
    Type <AST::dtype> (43)
        on left: 8 9 10
        on right: 11 24 36 37 40 41 42
    ConstDecl <std::shared_ptr<DeclStmt>> (44)
        on left: 11
        on right: 6
    ConstDefs <std::shared_ptr<VarDef>> (45)
        on left: 12 13
        on right: 11 13
    ConstDef <std::shared_ptr<VarDef>> (46)
        on left: 14 15
        on right: 12 13
    ConstAS <std::shared_ptr<ArraySubscript>> (47)
        on left: 16 17
        on right: 15 17 28 30
    ConstExp <std::shared_ptr<Exp>> (48)
        on left: 18
        on right: 16 17 19
    ConstInitVal <std::shared_ptr<InitVal>> (49)
        on left: 19 20 21
        on right: 14 15 22 23
    ConstInitVals <std::shared_ptr<InitVal>> (50)
        on left: 22 23
        on right: 21 23
    VarDecl <std::shared_ptr<DeclStmt>> (51)
        on left: 24
        on right: 7
    VarDefs <std::shared_ptr<VarDef>> (52)
        on left: 25 26
        on right: 24 26
    VarDef <std::shared_ptr<VarDef>> (53)
        on left: 27 28 29 30
        on right: 25 26
    InitVal <std::shared_ptr<InitVal>> (54)
        on left: 31 32 33
        on right: 29 30 34 35
    InitVals <std::shared_ptr<InitVal>> (55)
        on left: 34 35
        on right: 33 35
    FuncDef <std::shared_ptr<FuncDef>> (56)
        on left: 36 37
        on right: 3 5
    FuncFParams <std::shared_ptr<FuncFParam>> (57)
        on left: 38 39
        on right: 37 39
    FuncFParam <std::shared_ptr<FuncFParam>> (58)
        on left: 40 41 42
        on right: 38 39
    ArraySubscripts <std::shared_ptr<ArraySubscript>> (59)
        on left: 43 44
        on right: 42 44 64
    Block <std::shared_ptr<CompStmt>> (60)
        on left: 45 46
        on right: 36 37 54
    BlockItems <std::shared_ptr<CompStmt>> (61)
        on left: 47 48
        on right: 46 48
    BlockItem <std::shared_ptr<Stmt>> (62)
        on left: 49 50
        on right: 47 48
    Stmt <std::shared_ptr<Stmt>> (63)
        on left: 51 52 53 54 55 56 57 58 59 60 61
        on right: 50 55 56 57
    Exp <std::shared_ptr<Exp>> (64)
        on left: 62
        on right: 31 43 44 51 53 61 65 76 77
    LVal <std::shared_ptr<Exp>> (65)
        on left: 63 64
        on right: 51 66
    PrimaryExp <std::shared_ptr<Exp>> (66)
        on left: 65 66 67
        on right: 70
    Number <std::shared_ptr<Exp>> (67)
        on left: 68 69
        on right: 67
    UnaryExp <std::shared_ptr<Exp>> (68)
        on left: 70 71 72 73 74 75
        on right: 73 74 75 78 79 80 81
    FuncRParams <std::shared_ptr<FuncRParam>> (69)
        on left: 76 77
        on right: 72 77
    MulExp <std::shared_ptr<Exp>> (70)
        on left: 78 79 80 81
        on right: 79 80 81 82 83 84
    AddExp <std::shared_ptr<Exp>> (71)
        on left: 82 83 84
        on right: 18 62 83 84 85 86 87 88 89
    RelExp <std::shared_ptr<Exp>> (72)
        on left: 85 86 87 88 89
        on right: 86 87 88 89 90 91 92
    EqExp <std::shared_ptr<Exp>> (73)
        on left: 90 91 92
        on right: 91 92 93 94
    LAndExp <std::shared_ptr<Exp>> (74)
        on left: 93 94
        on right: 94 95 96
    LOrExp <std::shared_ptr<Exp>> (75)
        on left: 95 96
        on right: 55 56 57 96


State 0

    0 $accept: • CompileUnit $end

    Y_INT    shift, and go to state 1
    Y_VOID   shift, and go to state 2
    Y_CONST  shift, and go to state 3
    Y_FLOAT  shift, and go to state 4

    CompileUnit  go to state 5
    CompUnit     go to state 6
    Decl         go to state 7
    Type         go to state 8
    ConstDecl    go to state 9
    VarDecl      go to state 10
    FuncDef      go to state 11


State 1

    8 Type: Y_INT •

    $default  reduce using rule 8 (Type)


State 2

   10 Type: Y_VOID •

    $default  reduce using rule 10 (Type)


State 3

   11 ConstDecl: Y_CONST • Type ConstDefs Y_SEMICOLON

    Y_INT    shift, and go to state 1
    Y_VOID   shift, and go to state 2
    Y_FLOAT  shift, and go to state 4

    Type  go to state 12


State 4

    9 Type: Y_FLOAT •

    $default  reduce using rule 9 (Type)


State 5

    0 $accept: CompileUnit • $end

    $end  shift, and go to state 13


State 6

    1 CompileUnit: CompUnit •
    2 CompUnit: CompUnit • Decl
    3         | CompUnit • FuncDef

    Y_INT    shift, and go to state 1
    Y_VOID   shift, and go to state 2
    Y_CONST  shift, and go to state 3
    Y_FLOAT  shift, and go to state 4

    $default  reduce using rule 1 (CompileUnit)

    Decl       go to state 14
    Type       go to state 8
    ConstDecl  go to state 9
    VarDecl    go to state 10
    FuncDef    go to state 15


State 7

    4 CompUnit: Decl •

    $default  reduce using rule 4 (CompUnit)


State 8

   24 VarDecl: Type • VarDefs Y_SEMICOLON
   36 FuncDef: Type • Y_ID Y_LPAR Y_RPAR Block
   37        | Type • Y_ID Y_LPAR FuncFParams Y_RPAR Block

    Y_ID  shift, and go to state 16

    VarDefs  go to state 17
    VarDef   go to state 18


State 9

    6 Decl: ConstDecl •

    $default  reduce using rule 6 (Decl)


State 10

    7 Decl: VarDecl •

    $default  reduce using rule 7 (Decl)


State 11

    5 CompUnit: FuncDef •

    $default  reduce using rule 5 (CompUnit)


State 12

   11 ConstDecl: Y_CONST Type • ConstDefs Y_SEMICOLON

    Y_ID  shift, and go to state 19

    ConstDefs  go to state 20
    ConstDef   go to state 21


State 13

    0 $accept: CompileUnit $end •

    $default  accept


State 14

    2 CompUnit: CompUnit Decl •

    $default  reduce using rule 2 (CompUnit)


State 15

    3 CompUnit: CompUnit FuncDef •

    $default  reduce using rule 3 (CompUnit)


State 16

   27 VarDef: Y_ID •
   28       | Y_ID • ConstAS
   29       | Y_ID • Y_ASSIGN InitVal
   30       | Y_ID • ConstAS Y_ASSIGN InitVal
   36 FuncDef: Type Y_ID • Y_LPAR Y_RPAR Block
   37        | Type Y_ID • Y_LPAR FuncFParams Y_RPAR Block

    Y_ASSIGN   shift, and go to state 22
    Y_LPAR     shift, and go to state 23
    Y_LSQUARE  shift, and go to state 24

    $default  reduce using rule 27 (VarDef)

    ConstAS  go to state 25


State 17

   24 VarDecl: Type VarDefs • Y_SEMICOLON

    Y_SEMICOLON  shift, and go to state 26


State 18

   25 VarDefs: VarDef •
   26        | VarDef • Y_COMMA VarDefs

    Y_COMMA  shift, and go to state 27

    $default  reduce using rule 25 (VarDefs)


State 19

   14 ConstDef: Y_ID • Y_ASSIGN ConstInitVal
   15         | Y_ID • ConstAS Y_ASSIGN ConstInitVal

    Y_ASSIGN   shift, and go to state 28
    Y_LSQUARE  shift, and go to state 24

    ConstAS  go to state 29


State 20

   11 ConstDecl: Y_CONST Type ConstDefs • Y_SEMICOLON

    Y_SEMICOLON  shift, and go to state 30


State 21

   12 ConstDefs: ConstDef •
   13          | ConstDef • Y_COMMA ConstDefs

    Y_COMMA  shift, and go to state 31

    $default  reduce using rule 12 (ConstDefs)


State 22

   29 VarDef: Y_ID Y_ASSIGN • InitVal

    Y_ADD       shift, and go to state 32
    Y_SUB       shift, and go to state 33
    Y_NOT       shift, and go to state 34
    Y_LPAR      shift, and go to state 35
    Y_LBRACKET  shift, and go to state 36
    num_INT     shift, and go to state 37
    num_FLOAT   shift, and go to state 38
    Y_ID        shift, and go to state 39

    InitVal     go to state 40
    Exp         go to state 41
    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 45
    MulExp      go to state 46
    AddExp      go to state 47


State 23

   36 FuncDef: Type Y_ID Y_LPAR • Y_RPAR Block
   37        | Type Y_ID Y_LPAR • FuncFParams Y_RPAR Block

    Y_INT    shift, and go to state 1
    Y_VOID   shift, and go to state 2
    Y_RPAR   shift, and go to state 48
    Y_FLOAT  shift, and go to state 4

    Type         go to state 49
    FuncFParams  go to state 50
    FuncFParam   go to state 51


State 24

   16 ConstAS: Y_LSQUARE • ConstExp Y_RSQUARE
   17        | Y_LSQUARE • ConstExp Y_RSQUARE ConstAS

    Y_ADD      shift, and go to state 32
    Y_SUB      shift, and go to state 33
    Y_NOT      shift, and go to state 34
    Y_LPAR     shift, and go to state 35
    num_INT    shift, and go to state 37
    num_FLOAT  shift, and go to state 38
    Y_ID       shift, and go to state 39

    ConstExp    go to state 52
    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 45
    MulExp      go to state 46
    AddExp      go to state 53


State 25

   28 VarDef: Y_ID ConstAS •
   30       | Y_ID ConstAS • Y_ASSIGN InitVal

    Y_ASSIGN  shift, and go to state 54

    $default  reduce using rule 28 (VarDef)


State 26

   24 VarDecl: Type VarDefs Y_SEMICOLON •

    $default  reduce using rule 24 (VarDecl)


State 27

   26 VarDefs: VarDef Y_COMMA • VarDefs

    Y_ID  shift, and go to state 55

    VarDefs  go to state 56
    VarDef   go to state 18


State 28

   14 ConstDef: Y_ID Y_ASSIGN • ConstInitVal

    Y_ADD       shift, and go to state 32
    Y_SUB       shift, and go to state 33
    Y_NOT       shift, and go to state 34
    Y_LPAR      shift, and go to state 35
    Y_LBRACKET  shift, and go to state 57
    num_INT     shift, and go to state 37
    num_FLOAT   shift, and go to state 38
    Y_ID        shift, and go to state 39

    ConstExp      go to state 58
    ConstInitVal  go to state 59
    LVal          go to state 42
    PrimaryExp    go to state 43
    Number        go to state 44
    UnaryExp      go to state 45
    MulExp        go to state 46
    AddExp        go to state 53


State 29

   15 ConstDef: Y_ID ConstAS • Y_ASSIGN ConstInitVal

    Y_ASSIGN  shift, and go to state 60


State 30

   11 ConstDecl: Y_CONST Type ConstDefs Y_SEMICOLON •

    $default  reduce using rule 11 (ConstDecl)


State 31

   13 ConstDefs: ConstDef Y_COMMA • ConstDefs

    Y_ID  shift, and go to state 19

    ConstDefs  go to state 61
    ConstDef   go to state 21


State 32

   73 UnaryExp: Y_ADD • UnaryExp

    Y_ADD      shift, and go to state 32
    Y_SUB      shift, and go to state 33
    Y_NOT      shift, and go to state 34
    Y_LPAR     shift, and go to state 35
    num_INT    shift, and go to state 37
    num_FLOAT  shift, and go to state 38
    Y_ID       shift, and go to state 39

    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 62


State 33

   74 UnaryExp: Y_SUB • UnaryExp

    Y_ADD      shift, and go to state 32
    Y_SUB      shift, and go to state 33
    Y_NOT      shift, and go to state 34
    Y_LPAR     shift, and go to state 35
    num_INT    shift, and go to state 37
    num_FLOAT  shift, and go to state 38
    Y_ID       shift, and go to state 39

    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 63


State 34

   75 UnaryExp: Y_NOT • UnaryExp

    Y_ADD      shift, and go to state 32
    Y_SUB      shift, and go to state 33
    Y_NOT      shift, and go to state 34
    Y_LPAR     shift, and go to state 35
    num_INT    shift, and go to state 37
    num_FLOAT  shift, and go to state 38
    Y_ID       shift, and go to state 39

    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 64


State 35

   65 PrimaryExp: Y_LPAR • Exp Y_RPAR

    Y_ADD      shift, and go to state 32
    Y_SUB      shift, and go to state 33
    Y_NOT      shift, and go to state 34
    Y_LPAR     shift, and go to state 35
    num_INT    shift, and go to state 37
    num_FLOAT  shift, and go to state 38
    Y_ID       shift, and go to state 39

    Exp         go to state 65
    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 45
    MulExp      go to state 46
    AddExp      go to state 47


State 36

   32 InitVal: Y_LBRACKET • Y_RBRACKET
   33        | Y_LBRACKET • InitVals Y_RBRACKET

    Y_ADD       shift, and go to state 32
    Y_SUB       shift, and go to state 33
    Y_NOT       shift, and go to state 34
    Y_LPAR      shift, and go to state 35
    Y_LBRACKET  shift, and go to state 36
    Y_RBRACKET  shift, and go to state 66
    num_INT     shift, and go to state 37
    num_FLOAT   shift, and go to state 38
    Y_ID        shift, and go to state 39

    InitVal     go to state 67
    InitVals    go to state 68
    Exp         go to state 41
    LVal        go to state 42
    PrimaryExp  go to state 43
    Number      go to state 44
    UnaryExp    go to state 45
    MulExp      go to state 46
    AddExp      go to state 47


State 37

   68 Number: num_INT •

    $default  reduce using rule 68 (Number)


State 38

   69 Number: num_FLOAT •

    $default  reduce using rule 69 (Number)


State 39

   63 LVal: Y_ID •
   64     | Y_ID • ArraySubscripts
   71 UnaryExp: Y_ID • Y_LPAR Y_RPAR
   72         | Y_ID • Y_LPAR FuncRParams Y_RPAR

    Y_LPAR     shift, and go to state 69
    Y_LSQUARE  shift, and go to state 70

    $default  reduce using rule 63 (LVal)

    ArraySubscripts  go to state 71


State 40

   29 VarDef: Y_ID Y_ASSIGN InitVal •

    $default  reduce using rule 29 (VarDef)


State 41

   31 InitVal: Exp •

    $default  reduce using rule 31 (InitVal)


State 42

   66 PrimaryExp: LVal •

    $default  reduce using rule 66 (PrimaryExp)


State 43

   70 UnaryExp: PrimaryExp •

    $default  reduce using rule 70 (UnaryExp)


State 44

   67 PrimaryExp: Number •

    $default  reduce using rule 67 (PrimaryExp)


State 45

   78 MulExp: UnaryExp •
